--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="ariffyaakop">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Bootstrap Assignment HTML - Tortoise Farm</title>
+    <title>Analytics HTML - Tortoise Farm</title>
 	<body style="background-color:#f5f5f5;">
  	<link rel="stylesheet" href="#">
 	<canvas id="myCanvas" width="200" height="30"></canvas>
@@ -28,8 +28,8 @@
         <div class="container-fluid">
          <!-- header banner -->
             <header class="jumbotron text-center">
-                <h1 style="font-family:stencil">HTML Assignment 1 :</h1>              
-	    <h1 style="font-family:forte"><b><i>Tortoise Museum</i></b></h1>             
+                <h1 style="font-family:stencil">TBA Analytics Proposal :</h1>              
+	    <h1 style="font-family:forte"><b><i>Blog: Tortoise Museum</i></b></h1>             
             </header>
         </div>
 
