--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="embed-responsive embed-responsive-16by9">
-	<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/T8lht4X6z-M?autoplay=1&muted=1">
+	<iframe width="853" height="480"src="https://www.youtube-nocookie.com/embed/T8lht4X6z-M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 	</iframe>
                     </div>
 
